{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 80,
  "lineage": "e7263dea-54e0-f3c2-bd53-e7241d2235cb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "public_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:288761756960:internet-gateway/igw-0dd6fc66008f324d3",
            "id": "igw-0dd6fc66008f324d3",
            "owner_id": "288761756960",
            "region": "af-south-1",
            "vpc_id": "vpc-04ef8b76573daccfd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.finbloom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:288761756960:route-table/rtb-07f217d330380f0f2",
            "id": "rtb-07f217d330380f0f2",
            "owner_id": "288761756960",
            "propagating_vgws": [],
            "region": "af-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dd6fc66008f324d3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04ef8b76573daccfd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "288761756960",
            "id": "rtb-07f217d330380f0f2",
            "region": "af-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.public_igw",
            "aws_vpc.finbloom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_subnet-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c1cb03dfcf8f7e0",
            "region": "af-south-1",
            "route_table_id": "rtb-07f217d330380f0f2",
            "subnet_id": "subnet-0e0ca4abfc3dd31f4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.public_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.subnets",
            "aws_vpc.finbloom_vpc",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": "public_subnet-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090609df6d40da5a6",
            "region": "af-south-1",
            "route_table_id": "rtb-07f217d330380f0f2",
            "subnet_id": "subnet-0418410e9f56b5925"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.public_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.subnets",
            "aws_vpc.finbloom_vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:288761756960:security-group/sg-0a32520df978fec32",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Allow outboud traffic to RDS",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e7a683395e5c73e9"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "id": "sg-0a32520df978fec32",
            "ingress": [],
            "name": "lambda_sg",
            "name_prefix": "",
            "owner_id": "288761756960",
            "region": "af-south-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04ef8b76573daccfd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "288761756960",
            "id": "sg-0a32520df978fec32",
            "region": "af-south-1"
          },
          "dependencies": [
            "aws_vpc.finbloom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:288761756960:security-group/sg-0e7a683395e5c73e9",
            "description": "security group for rds",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Allow outbound traffic to lambda",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0a32520df978fec32"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow outbound traffic to lambda",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a32520df978fec32"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "id": "sg-0e7a683395e5c73e9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow inbound traffic from lambda",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a32520df978fec32"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rds_sg",
            "name_prefix": "",
            "owner_id": "288761756960",
            "region": "af-south-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04ef8b76573daccfd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "288761756960",
            "id": "sg-0e7a683395e5c73e9",
            "region": "af-south-1"
          },
          "dependencies": [
            "aws_vpc.finbloom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_lambda_to_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow outboud traffic to RDS",
            "from_port": 5432,
            "id": "sgrule-839209453",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "af-south-1",
            "security_group_id": "sg-0a32520df978fec32",
            "security_group_rule_id": "sgr-0d4dff2e55ddf8b61",
            "self": false,
            "source_security_group_id": "sg-0e7a683395e5c73e9",
            "timeouts": null,
            "to_port": 5432,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.lambda_sg",
            "aws_security_group.rds_sg",
            "aws_vpc.finbloom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_rds_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow outbound traffic to lambda",
            "from_port": 0,
            "id": "sgrule-769848051",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "af-south-1",
            "security_group_id": "sg-0e7a683395e5c73e9",
            "security_group_rule_id": "sgr-0a2d51c0af99c84c6",
            "self": false,
            "source_security_group_id": "sg-0a32520df978fec32",
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.lambda_sg",
            "aws_security_group.rds_sg",
            "aws_vpc.finbloom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_rds_to_lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow inbound traffic from lambda",
            "from_port": 5432,
            "id": "sgrule-611139258",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "af-south-1",
            "security_group_id": "sg-0e7a683395e5c73e9",
            "security_group_rule_id": "sgr-078fdaf641d1933cf",
            "self": false,
            "source_security_group_id": "sg-0a32520df978fec32",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.lambda_sg",
            "aws_security_group.rds_sg",
            "aws_vpc.finbloom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_subnet-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:288761756960:subnet/subnet-0bffee89485d43f85",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1a",
            "availability_zone_id": "afs1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bffee89485d43f85",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "288761756960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "af-south-1",
            "tags": {
              "Environment": "Dev",
              "Name": "private_subnet-1-subnet",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "private_subnet-1-subnet",
              "Tier": "private"
            },
            "vpc_id": "vpc-04ef8b76573daccfd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "288761756960",
            "id": "subnet-0bffee89485d43f85",
            "region": "af-south-1"
          },
          "dependencies": [
            "aws_vpc.finbloom_vpc",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": "private_subnet-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:288761756960:subnet/subnet-01c5d41782b70d469",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1b",
            "availability_zone_id": "afs1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c5d41782b70d469",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "288761756960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "af-south-1",
            "tags": {
              "Environment": "Dev",
              "Name": "private_subnet-2-subnet",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "private_subnet-2-subnet",
              "Tier": "private"
            },
            "vpc_id": "vpc-04ef8b76573daccfd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "288761756960",
            "id": "subnet-01c5d41782b70d469",
            "region": "af-south-1"
          },
          "dependencies": [
            "aws_vpc.finbloom_vpc",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": "public_subnet-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:288761756960:subnet/subnet-0e0ca4abfc3dd31f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1a",
            "availability_zone_id": "afs1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0ca4abfc3dd31f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "288761756960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "af-south-1",
            "tags": {
              "Environment": "Dev",
              "Name": "public_subnet-1-subnet",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "public_subnet-1-subnet",
              "Tier": "public"
            },
            "vpc_id": "vpc-04ef8b76573daccfd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "288761756960",
            "id": "subnet-0e0ca4abfc3dd31f4",
            "region": "af-south-1"
          },
          "dependencies": [
            "aws_vpc.finbloom_vpc",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": "public_subnet-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:288761756960:subnet/subnet-0418410e9f56b5925",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1b",
            "availability_zone_id": "afs1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0418410e9f56b5925",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "288761756960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "af-south-1",
            "tags": {
              "Environment": "Dev",
              "Name": "public_subnet-2-subnet",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "public_subnet-2-subnet",
              "Tier": "public"
            },
            "vpc_id": "vpc-04ef8b76573daccfd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "288761756960",
            "id": "subnet-0418410e9f56b5925",
            "region": "af-south-1"
          },
          "dependencies": [
            "aws_vpc.finbloom_vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "finbloom_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:288761756960:vpc/vpc-04ef8b76573daccfd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04c6bdec18ca6e426",
            "default_route_table_id": "rtb-0b012ecd56b725b94",
            "default_security_group_id": "sg-019ef2a84679acc3a",
            "dhcp_options_id": "dopt-0e0fb36665dfdadb7",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04ef8b76573daccfd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b012ecd56b725b94",
            "owner_id": "288761756960",
            "region": "af-south-1",
            "tags": {
              "Environment": "Dev",
              "name": "Finbloom VPC"
            },
            "tags_all": {
              "Environment": "Dev",
              "name": "Finbloom VPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}